# arctgz

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING  Cargo.toml  Makefile  README  README.md  build.rs  install-manpage.sh
.github/workflows/: ci.yml  cross_tests.yml  docs.yml
docs/: config.yaml
docs/content/: api-reference.md  configuration.md  index.md  installation.md  license.md  usage.md
include/: arctgz.h
manual/: arctgz.7
src/: ffi.rs  lib.rs
src/core/: archive.rs  compile.rs  config.rs  delta.rs  encrypt.rs  extract.rs  init.rs  mod.rs  recipe.rs  sign.rs  verify.rs
src/handler/: error.rs  mod.rs  types.rs
tests/: compile_tests.rs  config_tests.rs  delta_tests.rs  encryption_tests.rs  extract_tests.rs  init_tests.rs  recipe_tests.rs  signature_tests.rs  verify_tests.rs  zstd_tests.rs
tests/common/: mod.rs
