[package]
name = "arctgz"
version = "0.8.2"
edition = "2024"

[dependencies]
chrono = { version = "0.4.45", features = ["serde"] }
dirs = "6.0.0"
flate2 = "1.1.9"
hex = "0.4.3"
rayon = "1.12.0"
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tar = "0.4.46"
thiserror = "2.0.18"
zstd = { version = "0.13.3", features = ["zstdmt"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
walkdir = "2.5.0"
glob = "0.3.3"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"

[dev-dependencies]
temp-env = "0.3.6"
tempfile = "3.27.0"
clap = { version = "4", features = ["derive"] }
anyhow = "1"